# SchoolMeal

./: .gitignore  Makefile  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.stand.yaml  docker-compose.test_db.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 2023-04-11_init.py  2023-04-14_init.py  2023-04-15_init.py  2023-04-17_init.py  2023-04-25_init.py  2023-05-10_add_portions_table.py  2023-05-21_portion_has_price.py  2023-05-31_teacher_id_field_to_creator_id_in_meal_.py
backend/app/: appcontainer.py  base.py  config.py  container.py  database.py  entities.py  error.py  exceptions.py  main.py  middlewares.py  responses.py
backend/app/auth/: api.py  app.py
backend/app/cancel_meal_periods/: api.py  app.py
backend/app/children/: api.py  app.py
backend/app/database/: base.py  constants.py  container.py  models.py  specifications.py  sqlalchemy.py  unit_of_work.py
backend/app/db/: base.py  container.py  env.py  models.py  repository.py  settings.py  specifications.py  unit_of_work.py  utils.py
backend/app/foods/: api.py
backend/app/gateway/: __init__.py  dependencies.py  dto.py  pupils.py  requests.py  responses.py
backend/app/legacy/: container.py
backend/app/meal_requests/: app.py
backend/app/meals/: api.py  app.py
backend/app/notification/: dependencies.py
backend/app/portions/: app.py
backend/app/school_classes/: app.py
backend/app/shared/: event.py  exceptions.py  specification.py  (+2 more)
backend/media/: .gitkeep
backend/tests/: conftest.py  responses.py  test_hello.py  unit_of_work.py  utils.py
backend/tools/: create_module.sh  generate_env.sh
tools/test_db/: Dockerfile  Makefile  pyproject.toml  setup.cfg
(+1826 files in other folders)
