[tool.poetry]
name = "school-meal"
version = "0.1.0"
description = ""
authors = ["peroovy <iury.perov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
loguru = "^0.7.2"
pyjwt = "^2.8.0"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
pydantic = {version = "^1.10.7", extras = ["email"]}
dependency-injector = "^4.41.0"
apscheduler = "^3.10.4"
result = "^0.16.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.9.0"
unify = "^0.5"
autoflake = "^2.2.1"
freezegun = "^1.2.2"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode="auto"